[package]
name = "arbi-flow"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "ArbiFlow"

[dependencies]
# Dependencies for smart contract (WebAssembly target)
stylus-sdk = {version = "0.6.0"}
alloy-primitives = "=0.7.6"
alloy-sol-types = "=0.7.6"
mini-alloc = "0.4.2"
hex = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Dependencies for monitoring code (native target)
tokio = { version = "1.12.0", features = ["full", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "2.0" }
serde_json = "1.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
default = []

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
